force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/LeadToAccountMatchingCriteria__mdt.object-meta.xml
<CustomObject>
    <description>Defines criteria settings for matching  Lead records to Accounts</description>
    <label>LeadToAccountMatchingCriteria</label>
    <pluralLabel>LeadToAccountMatchingCriteria</pluralLabel>
</CustomObject>