force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/fields/Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Field__c</fullName>
    <description>The target Account field</description>
    <label>Account Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>