force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define whether this matching criteria is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>