force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/fields/Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field__c</fullName>
    <description>The target lead field</description>
    <label>Lead Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>