force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/fields/Partial_Account_Start__c.field-meta.xml
<CustomField>
    <fullName>Partial_Account_Start__c</fullName>
    <description>Can be used when the Match Type is Partial to specify the where the matching should start</description>
    <label>Partial Account Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>