force-app/main/default/objects/LeadToAccountMatchingCriteria__mdt/fields/Partial_Lead_End__c.field-meta.xml
<CustomField>
    <fullName>Partial_Lead_End__c</fullName>
    <description>Can be used when the Match Type is Partial. Defines the end position for the match</description>
    <label>Partial Lead End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>